Bug 1312057 - Fix prefetch telmetry r=mayhemer,necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D11518